# django-ptb

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  Dockerfile  README.md  compose.yaml  constants.py  entrypoint.sh  nginx.conf  pyproject.toml
config/: _settings.py  settings.py  urls.py  wsgi.py
telegram_bot/: base.py  handlers.py  urls.py  utils.py  views.py
telegram_bot/management/commands/: runbot.py
